# Study.LayoutLMv1

./: .gitignore  README.md  pyproject.toml  runner.py
checkpoints/: README.md
study_llmv1/: __init__.py  const.py  dependency.py  tester.py  trainer.py
study_llmv1/utils/: __init__.py  apply_ocr.py  create_dataframe.py  encode_testing_example.py  encode_training_example.py  label_mapping.py  normalize_box.py  training_dataloader_from_df.py
