[tool.poetry]
description = "virtual env for using layout lm v1"
authors = ["HyeongSeok Kim <tiryul@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
tqdm = "^4.66.4"
transformers = "^4.42.3"
datasets = "^2.20.0"
typer = "^0.12.3"
scikit-learn = "^1.5.0"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
